<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_rectangle"
        android:gravity="center"
        android:text="@string/add_task"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/taskNameEditTxt"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"/>

    <ImageView
        android:id="@+id/calendarImgView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@+id/taskNameEditTxt"
        android:layout_alignParentTop="true"
        android:layout_marginTop="143dp"
        app:srcCompat="@drawable/ic_calendar_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/dateTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="97dp"
        android:layout_marginTop="152dp"
        android:text="@string/date"
        android:textSize="24sp" />
</RelativeLayout>